2015-06-13  gepr  <gepr@tempusdictum.com>

	* parameters.json (morb2mark, mark2pain, drug2pain): New parameters for morbidity.

2015-06-11  gepr  <gepr@tempusdictum.com>

	* parameters.json(doseTime): Add a new parameter so that the simulation will execute for awhile before it is dosed with compound.
	New model parameter sublist for LooseDyn containing the morbidity amount.

2015-06-09  gepr  <gepr@tempusdictum.com>

	* parameters.json("initialAcc", "morbidityDelay"): Two new parameters, one specifying the initial value of the accumulator and one specifying the amount of time to delay the registerMorbidity event (in hours).

2015-05-08  gepr  <gepr@tempusdictum.com>

	* parameters.json: Remove the seed to use System.currentTimeMillis().

2015-05-07  gepr  <gepr@tempusdictum.com>

	* parameters.json,batch.json: Rename batch.json back to parameters.json.
	(cycleLimit): Implement a model time inside the models and a MASON time (real-valued cycles) in batch.
	(timeLimit, cyclePerTime): Add to tight and loose models so that each model can have it's own temporal grounding in relation to the MASON cycles.
	(loose): New parameters similar to those for the tightly coupled model, but with more informative names: src2cent, cent2peri, peri2cent, cent2sink.  New parameter vp (volume of peripheral compartment).

2015-05-01  gepr  <gepr@tempusdictum.com>

	* batch.json: Renamed from parameters.json.  Reformat according to new Parameters structure, to contain 2 tight and batch maps<String,Number>.

2015-04-24  gepr  <gepr@tempusdictum.com>

	* parameters.json: Add dose and central compartment volume to default case (#1).
