@@ -5,6 +5,7 @@
         <group>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/cfg/parameters.json</file>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LocaleDyn.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LooseDyn.java</file>
         </group>
     </open-files>
 </project-private>
